# betor

./: .docker.env  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  prowlar-betor.yml  prowlarr-betor.yml  pyproject.toml  pytest.ini  scrapy.cfg  scrapyd.conf
.github/workflows/: ci.yml  release.yml
acceptance_tests/: test_determines_imdb_tmdb_ids_service.py
betor/: enum.py  enums.py  exceptions.py  settings.py  types.py  utils.py
betor/adapters/determines_strategies/: __init__.py  imdb_find_by_tmdb_strategy.py  imdb_search_strategy.py  imdb_suggestion_strategy.py  provider_url_mapping_strategy.py  raw_imdb_id_strategy.py  strategy.py  tmdb_find_by_imdb_strategy.py  tmdb_trending_strategy.py
betor/api/: app.py  business_metrics.py  fast_api.py
betor/api/v1/: router.py
betor/celery/: __init__.py  app.py  tasks.py
betor/databases/: mongodb.py  redis.py
betor/entities/: __init__.py  catalog_item.py  episodes_info.py  item.py  job_monitor.py  languages_info.py  provider_url_imdb_mapping.py  raw_item.py  search_job_monitor.py  torrent_info.py  torrent_trackers_info.py
betor/external_apis/: __init__.py  imdb_api_dev_search_api.py  imdb_api_dev_title_api.py  imdb_suggestion_api.py  tmdb_external_ids_api.py  tmdb_find_by_id_api.py  tmdb_trending_api.py
betor/providers/: __init__.py  bludv.py  comando_torrents.py  provider.py  provider_base.py  rede_torrent.py  sem_torrent.py  starck_filmes.py  torrent_dos_filmes.py
betor/repositories/: __init__.py  catalog_items_repository.py  items_repository.py  job_monitor_repository.py  provider_url_imdb_mapping_repository.py  raw_items_repository.py  search_job_monitor_repository.py
betor/services/: __init__.py  add_job_results_service.py  admin_determines_imdb_tmdb_id_service.py  admin_download_items_service.py  admin_maps_provider_url_imdb_service.py  admin_normalize_items_tmdb_id_service.py  catalog_service.py  detail_job_monitor_service.py  determines_imdb_tmdb_ids_service.py  get_item_service.py  get_job_status_service.py  get_raw_item_service.py  insert_or_update_raw_item_service.py  list_items_service.py  list_raw_items_service.py  process_raw_item_service.py  scrape_service.py  search_service.py  update_item_episodes_info_service.py  update_item_languages_info_service.py  update_item_torrent_info_service.py  update_item_torrent_trackers_info_service.py
betor/types/: __init__.py  item.py  item_type.py  raw_item.py  torrent_info.py
betor/use_services/: __init__.py  scrapyd_use_service.py
betor_scrapy/: items.py  loaders.py  middlewares.py  pipelines.py  processors.py  settings.py  utils.py
betor_scrapy/extension/: flaresolverr_extension.py
betor_scrapy/extensions/: __init__.py  flaresolverr_extension.py
betor_scrapy/httpcache/: __init__.py  betor_http_cache_policy.py  redis_cache_storage.py
betor_scrapy/middlewares/: __init__.py  cloudflare_downloader_middleware.py  downloader_middleware.py  spider_middleware.py  ua_rotator_middleware.py
betor_scrapy/pipelines/: __init__.py  dispatch_process_raw_item_pipeline.py  items_repository_pipeline.py  job_monitor_results_pipeline.py  raw_items_pipeline.py  raw_items_repository_pipeline.py
betor_scrapy/spiders/: bludv.py  comando_torrents.py  mixins.py  provider_spider.py  rede_torrent.py  sem_torrent.py  starck_filmes.py  torrent_dos_filmes.py
betor_scrapy/stats/: __init__.py  influxdb_stats.py
docs/: c4_container.puml
tests/: conftest.py
tests/betor/: test_utils.py
tests/betor/external_apis/: test_imdb_suggestion_api.py
tests/betor/repositories/: test_items_repository.py  test_provider_url_imdb_mapping_repository.py  test_raw_items_repository.py
tests/betor/services/: test_admin_download_items_service.py  test_determines_imdb_tmdb_ids_service.py  test_process_raw_item_service.py  (+2 more)
tests/betor_scrapy/: test_processors.py  test_utils.py
(+18 files in other folders)
