[project]
name = "betor"
version = "0.1.0"
description = "BeTor é o buscador Tor de filmes e séries com o jeitinho mais brasileiro da internet."
authors = [
    {name = "Douglas Paz",email = "eu@douglaspaz.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "scrapy (>=2.13.3,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "python-slugify (>=8.0.4,<9.0.0)",
    "langcodes (>=3.5.0,<4.0.0)",
]

[project.urls]
Homepage = "https://github.com/dougppaz/betor"
Documentation = "https://github.com/dougppaz/betor"
Repository = "https://github.com/dougppaz/betor.git"
"Bug Tracker" = "https://github.com/dougppaz/betor/issues"
Changelog = "https://github.com/dougppaz/betor/releases"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.setuptools]
packages = ["betor", "betor_scrapy"]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
flake8 = "^7.3.0"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.17.0"
types-requests = "^2.32.4.20250611"
pytest = "^8.4.1"
