[project]
name = "betor"
version = "1.24.1"
description = "BeTor é o buscador P2P de filmes e séries com o jeitinho mais brasileiro da internet."
authors = [
    {name = "Douglas Paz",email = "eu@douglaspaz.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "scrapy (>=2.13.3,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "python-slugify (>=8.0.4,<9.0.0)",
    "langcodes (>=3.5.0,<4.0.0)",
    "motor[srv] (>=3.7.1,<4.0.0)",
    "redis (>=6.2.0,<7.0.0)",
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "celery (>=5.5.3,<6.0.0)",
    "torf (>=4.3.0,<5.0.0)",
    "libtorrent (>=2.0.11,<3.0.0)",
    "fastapi-pagination (>=0.13.3,<0.14.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "scrapyd (>=1.6.0,<2.0.0)",
    "setuptools (>=80.9.0,<81.0.0)",
    "uuid (>=1.30,<2.0)",
    "language-data (>=1.4.0,<2.0.0)",
]

[project.urls]
Homepage = "https://github.com/dougppaz/betor"
Documentation = "https://github.com/dougppaz/betor"
Repository = "https://github.com/dougppaz/betor.git"
"Bug Tracker" = "https://github.com/dougppaz/betor/issues"
Changelog = "https://github.com/dougppaz/betor/releases"

[project.entry-points.scrapy]
settings = "betor_scrapy.settings"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
packages = [
    { include = "betor" },
    { include = "betor_scrapy" },
]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
flake8 = "^7.3.0"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.17.0"
types-requests = "^2.32.4.20250611"
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
pytest-cov = "^6.2.1"
flower = "^2.0.1"
faker = "^37.5.3"
types-setuptools = "^80.9.0.20250809"

[tool.setuptools]
packages = ["betor", "betor_scrapy"]

[[tool.mypy.overrides]]
module = "celery"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "celery.result"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "libtorrent"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "kombu"
ignore_missing_imports = true
